fixed WorldCatTerms.tpl so terms are displayed in 3 columns instead of wrapping
git-svn-id: https://vufind.svn.sourceforge.net/svnroot/vufind/trunk@3526 c33641aa-f933-0410-a13b-8402795397c9

--- a/web/interface/themes/blueprint/css/styles.css
+++ b/web/interface/themes/blueprint/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 /* adjust some default blueprint styles */
-p,ul,dl,form,input,textarea,select,label { margin-bottom: .4em; }
+p,ul,dl,form,input,textarea,select,label { margin-bottom: 0.2em; }
 h1 { font-size: 1.5em; margin-top: 0.5em; margin-bottom: 0.5em; }
 h2 { font-size: 1.4em; margin-top: 0.5em; margin-bottom: 0.5em; }
 h3 { font-size: 1.3em; margin-top: 0.5em; margin-bottom: 0.5em; }
